// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Sidebar snapshot - closed 1`] = `
<div
  aria-hidden={false}
  className="pf-v6-c-page__sidebar pf-m-expanded"
  id="page-sidebar"
  inert=""
>
  <div
    className="pf-v6-c-page__sidebar-body sidebarBody"
  >
    <div
      className="mainNavWrapper"
    >
      <div>
        Mock Navigation component
      </div>
    </div>
    <div
      className="agentNavWrapper"
    >
      <nav
        aria-label="Agent Pods"
        className="pf-v6-c-nav"
        data-ouia-component-id="OUIA-Generated-Nav-2"
        data-ouia-component-type="PF6/Nav"
        data-ouia-safe={true}
      />
    </div>
  </div>
</div>
`;

exports[`Sidebar snapshot - open 1`] = `
<div
  aria-hidden={false}
  className="pf-v6-c-page__sidebar pf-m-expanded"
  id="page-sidebar"
>
  <div
    className="pf-v6-c-page__sidebar-body sidebarBody"
  >
    <div
      className="mainNavWrapper"
    >
      <div>
        Mock Navigation component
      </div>
    </div>
    <div
      className="agentNavWrapper"
    >
      <nav
        aria-label="Agent Pods"
        className="pf-v6-c-nav"
        data-ouia-component-id="OUIA-Generated-Nav-1"
        data-ouia-component-type="PF6/Nav"
        data-ouia-safe={true}
      />
    </div>
  </div>
</div>
`;
